--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,13 @@
 .DS_Store
 .idea
 /venv/
+
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+*.code-workspace
+
+# Local History for Visual Studio Code
+.history/
