Working on session control

--- a/.firebaserc
+++ b/.firebaserc
@@ -1,5 +1,17 @@
 {
   "projects": {
     "default": "ga-knowledge-hub"
+  },
+  "targets": {
+    "ga-knowledge-hub": {
+      "hosting": {
+        "prod": [
+          "ga-knowledge-hub"
+        ],
+        "dev": [
+          "ga-knowledge-hub-dev"
+        ]
+      }
+    }
   }
 }
