First connection of Flask and Twine Ingest

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,6 +1,6 @@
 FROM python:3.7
 
-RUN pip install Flask gunicorn Flask-Login firebase-admin fireo Flask-Session redis
+RUN pip install Flask gunicorn Flask-Login firebase-admin fireo Flask-Session redis bs4
 
 COPY src/ /app
 WORKDIR /app
