--- a/firebase.json
+++ b/firebase.json
@@ -7,19 +7,53 @@
       "**/.*",
       "**/node_modules/**"
     ],
-    "rewrites": [{
-      "source": "**",
-      "run" : {
-        "serviceId": "knowledge-hub",
-        "region": "us-east1"
+    "rewrites": [
+      {
+        "source": "**",
+        "run": {
+          "serviceId": "knowledge-hub",
+          "region": "us-east1"
+        }
       }
-    }],
-    "headers": [{
-      "source": "*",
-      "headers": [{
-        "key": "Cache-Control",
-        "value": "no-cache, max-age=0, s-maxage=0"
-      }]
-    }]
+    ],
+    "headers": [
+      {
+        "source": "*",
+        "headers": [
+          {
+            "key": "Cache-Control",
+            "value": "no-cache, max-age=0, s-maxage=0"
+          }
+        ]
+      }
+    ]
+  },
+  "emulators": {
+    "auth": {
+      "port": 9099
+    },
+    "functions": {
+      "port": 5001
+    },
+    "firestore": {
+      "port": 8080
+    },
+    "database": {
+      "port": 9000
+    },
+    "hosting": {
+      "port": 5000
+    },
+    "pubsub": {
+      "port": 8085
+    },
+    "ui": {
+      "enabled": true
+    }
+  },
+  "functions": {
+    "predeploy": [
+      "npm --prefix \"$RESOURCE_DIR\" run lint"
+    ]
   }
 }
