--- a/firebase.json
+++ b/firebase.json
@@ -1,32 +1,21 @@
 {
+  "database": {
+    "rules": "database.rules.json"
+  },
+  "firestore": {
+    "rules": "firestore.rules",
+    "indexes": "firestore.indexes.json"
+  },
   "hosting": {
-    "site": "gaknowledgehub",
-    "public": "static",
+    "public": "public",
     "ignore": [
       "firebase.json",
       "**/.*",
       "**/node_modules/**"
-    ],
-    "rewrites": [
-      {
-        "source": "**",
-        "run": {
-          "serviceId": "knowledge-hub",
-          "region": "us-east1"
-        }
-      }
-    ],
-    "headers": [
-      {
-        "source": "*",
-        "headers": [
-          {
-            "key": "Cache-Control",
-            "value": "no-cache, max-age=0, s-maxage=0"
-          }
-        ]
-      }
     ]
+  },
+  "storage": {
+    "rules": "storage.rules"
   },
   "emulators": {
     "auth": {
@@ -51,9 +40,7 @@
       "enabled": true
     }
   },
-  "functions": {
-    "predeploy": [
-      "npm --prefix \"$RESOURCE_DIR\" run lint"
-    ]
+  "remoteconfig": {
+    "template": "remoteconfig.template.json"
   }
 }
