--- a/package.json
+++ b/package.json
@@ -19,5 +19,9 @@
   "homepage": "https://github.com/shivamshah1999/JIB-0330#readme",
   "devDependencies": {
     "firebase-tools": "^9.5.0"
+  },
+  "dependencies": {
+    "firebase-admin": "^9.5.0",
+    "firebase-functions": "^3.13.2"
   }
 }
