--- a/firebase.json
+++ b/firebase.json
@@ -28,5 +28,13 @@
         ]
       }
     ]
+  },
+  "emulators": {
+    "firestore": {
+      "port": 8081
+    },
+    "ui": {
+      "enabled": true
+    }
   }
 }
