--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,6 @@ database-debug.log
 *.pyc
 *.pyc
 *.pyc
+server/src/story_editing/__pycache__/Parsing.cpython-38.pyc
+server/src/story_editing/__pycache__/ParsingUtils.cpython-38.pyc
+.vscode/settings.json
