--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,11 @@
 beautifulsoup4==4.9.3
 flask==1.1.2
+flask_login
+flask_mail
+firebase_admin
+fireo
+datetime
+werkzeug
 
 # Modules potentially useful for debugging, remove if not needed
 pprintpp
