Reset password now sends an email so the user can use a temporary password to reset their password

--- a/firebase.json
+++ b/firebase.json
@@ -1,6 +1,6 @@
 {
   "hosting": {
-    "site": "ga-knowledge-hub",
+    "site": "gaknowledgehub",
     "public": "static",
     "ignore": [
       "firebase.json",
