--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,6 +1,6 @@
 FROM python:3.7
 
-RUN pip install Flask gunicorn Flask-Login firebase-admin fireo Flask-Session bs4 flask-session-plus
+RUN pip install Flask gunicorn Flask-Login firebase-admin fireo Flask-Session bs4 flask-session-plus mock
 
 COPY src/ /app
 WORKDIR /app
