--- a/package.json
+++ b/package.json
@@ -21,9 +21,9 @@
     "firebase-tools": "^9.5.0"
   },
   "dependencies": {
-    "firebase": "^8.3.0",
+    "eslint": "^7.22.0",
+    "firebase": "^8.3.1",
     "firebase-admin": "^9.5.0",
-    "firebase-functions": "^3.13.2",
-    "eslint": "^7.22.0"
+    "firebase-functions": "^3.13.2"
   }
 }
